--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -142,7 +142,7 @@
   \item[$\getringroot{\dots}$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\zeropad{n}{\dots}$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
   \item[$\seqfromhash{}{\dots}$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
-  \item[$\ecrecover{\dots}$] The group of erasure-coding piece-recovery functions.
+  \item[$\ecrecover{\dots}$] The group of erasure-coding piece-recovery functions. See equation \ref{eq:erasurecodinginv}.
   \item[$\edsigndata{k}{\dots}$] The Ed25519 signing function. See section \ref{sec:cryptography}.
   \item[$\blssigndata{k}{\dots}$] The \textsc{bls} signing function. See section \ref{sec:cryptography}.
   \item[$\wallclock$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
